--- a/mos.yml
+++ b/mos.yml
@@ -55,7 +55,7 @@ libs:
   - origin: https://github.com/mongoose-os-libs/i2c
   - origin: https://github.com/mongoose-os-libs/rpc-loopback
   - origin: https://github.com/mongoose-os-libs/wifi
-  - origin: https://github.com/ushijimamit/pppos
+  - origin: https://github.com/ushijimamit/pppos-m6315
   - origin: https://github.com/mongoose-os-libs/mqtt
   - origin: https://github.com/mongoose-os-libs/dht
   - origin: https://github.com/mongoose-os-libs/arduino-adafruit-ssd1306
